--- a/style.css
+++ b/style.css
@@ -31,7 +31,45 @@ p{
 section{
     margin-bottom: 50px;
 }
+/* -------------------navbar------------------------- */
+.navbar{
+    /* border: 2px solid red; */
+    /* background: orange; */
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+    font-weight: 800;
 
+}
+.navbar ul{
+    float: right;
+    margin-right: 20px;
+    list-style: none;
+}
+
+.navbar ul li {
+    display: inline-block;
+    line-height: 50px;
+    margin-right: 5px;
+}
+
+
+
+.navbar ul li a{
+    text-decoration: none;
+    color: orange;
+    margin: 10px;
+    padding: 10px 20px;
+}
+
+.navbar ul li a:hover{
+    color: white;
+    background: orange;
+    padding: 10px 20px;
+    border-radius: 5px;
+
+}
+/* ------------------------------end------------------------------------------- */
 .orange{
     color: orange;
 }
@@ -59,6 +97,11 @@ section{
     color: white;
     box-shadow: 2px 2px 25px #fd670286;
 }
+
+.btn-link:hover{
+    padding: 16px 42px;
+}
+
 .half-width img{
     width: 80%;
 }
@@ -102,10 +145,12 @@ section{
     box-shadow: 5px 5px 20px rgba(128, 128, 128, 0.555);
     /* border: 2px solid red; */
 }
+
 .card img{
     width: 330px;
     height: 250px;
 }
+
 
 .subscriber{
     margin-top: 50px;
